Project list - project owner filter

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/List.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/List.cshtml
@@ -18,23 +18,6 @@
 }
 
 <div class="content-container project-list">
-    <div class="row project-list-new">
-        <div class="col-md-4">
-            <button type="button" class="btn btn-default" id="new-project-button">@Localizer.Translate("CreateNewProject", "Admin")</button>
-        </div>
-    </div>
-    
-     <div class="row project-list-header">
-        <div class="col-md-2">
-            <label for="filter">@Localizer.Translate("Filter", "Admin"):</label>
-            <select class="form-control input-sm" id="filter">
-                <option>@Localizer.Translate("All", "Admin")</option>
-                <option>@Localizer.Translate("MyProjects", "Admin")</option>
-                <option>@Localizer.Translate("ForeignProjects", "Admin")</option>
-            </select>
-        </div>
-     </div>
-    
     <div class="row">
         <div class="col-xs-12 project-section" id="project-section">
             <div class="section">
@@ -46,21 +29,27 @@
                             </div>
                             <div class="col-xs-12 col-sm-10">
                                 <form asp-action="List" asp-controller="Project" method="get" class="project-search-form search-form form-inline">
-                                    <div class="form-group">
-                                        <div id="createProjectButton" class="btn btn-default">
-                                            <i class="fa fa-plus"></i>
-                                        </div>
-                                        <div class="search-input">
-                                            <input class="form-control search-value" name="search" placeholder=" " value="@Model.Projects.SearchQuery" />
-                                            <i class="fa fa-close reset-search-button"></i>
-                                        </div>
-                                        <div class="search-button">
-                                            <button class="btn btn-default" type="submit">
-                                                <i class="fa fa-search"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </form>
+                                   <div class="form-group">
+                                       <select class="form-control input-sm" id="projectOwnerFilter">
+                                           @foreach(var option in Model.FilterTypes)
+                                            {
+                                                <option value="@option">@Localizer.Translate(option.ToString(), "Admin")</option>     
+                                            }
+                                       </select>
+                                       <button type="button" class="btn btn-default" id="new-project-button">
+                                           @Localizer.Translate("CreateNewProject", "Admin")
+                                       </button>
+                                       <div class="search-input">
+                                           <input class="form-control search-value" name="search" placeholder=" " value="@Model.Projects.SearchQuery"/>
+                                           <i class="fa fa-close reset-search-button"></i>
+                                       </div>
+                                       <div class="search-button">
+                                           <button class="btn btn-default" type="submit">
+                                               <i class="fa fa-search"></i>
+                                           </button>
+                                       </div>
+                                   </div>
+                               </form>
                             </div>
                         </div>
                     </div>
