--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
@@ -116,7 +116,7 @@
         .panel-title {
             padding-top: 7px;
             margin-bottom: 0.5em;
-            text-align: center;
+            text-align: left;
         }
 
         @media(max-width: 767px) {
