Move ProjectOwnerType to MainService contracts

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/List.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/List.cshtml
@@ -10,7 +10,7 @@
 
 @section styles {
     <link asp-append-version="true" rel="stylesheet" href="~/Areas/Admin/css/ridics.project.css"/>
-    <link asp-append-version="true" rel="stylesheet" href="~/css/ridics.permissions.css"/>
+    <link asp-append-version="true" rel="stylesheet" href="~/css/ridics.permissions.css"/>@*TODO WHY PERMISSIONS.CSS??????*@
 }
 
 @section scripts {
