Load groups by user from database, sync assigned roles from Auth service in the same request

--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/RolePermission.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/RolePermission.cshtml
@@ -2,7 +2,7 @@
 @using ITJakub.Web.Hub.Models
 @using Scalesoft.Localization.AspNetCore
 @using Scalesoft.Localization.Core.Util
-@model ITJakub.Web.Hub.Areas.Admin.Models.ListViewModel<Vokabular.MainService.DataContracts.Contracts.Permission.RoleContract>
+@model ITJakub.Web.Hub.Areas.Admin.Models.ListViewModel<Vokabular.MainService.DataContracts.Contracts.Permission.UserGroupContract>
 @inject ILocalizationService Localizer
 
 @{
