--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_RoleListWidgetPage.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_RoleListWidgetPage.cshtml
@@ -2,7 +2,7 @@
 @using Ridics.Core.Structures.Shared
 @using Scalesoft.Localization.AspNetCore
 @using Vokabular.Shared.AspNetCore.Extensions
-@model ITJakub.Web.Hub.Areas.Admin.Models.ListViewModel<Vokabular.MainService.DataContracts.Contracts.Permission.RoleContract>
+@model ITJakub.Web.Hub.Areas.Admin.Models.ListViewModel<Vokabular.MainService.DataContracts.Contracts.Permission.UserGroupContract>
 @inject ILocalizationService Localizer
 
 @foreach (var role in Model.List)
