--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_RoleListWidget.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_RoleListWidget.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Scalesoft.Localization.AspNetCore
-@model ITJakub.Web.Hub.Areas.Admin.Models.ListViewModel<Vokabular.MainService.DataContracts.Contracts.Permission.RoleContract>
+@model ITJakub.Web.Hub.Areas.Admin.Models.ListViewModel<Vokabular.MainService.DataContracts.Contracts.Permission.UserGroupContract>
 
 @inject ILocalizationService Localizer
 
