--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/_ProjectListContent.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/_ProjectListContent.cshtml
@@ -6,11 +6,11 @@
 {
     <div class="row reset-search">
         <div class="query">
-            <span class="text-nowrap">@Localizer.Translate("SearchQuery", "Permission"): <span class="searched-query">@Model.SearchQuery</span></span>
+            <span class="text-nowrap">@Localizer.Translate("SearchQuery", "Admin"): <span class="searched-query">@Model.SearchQuery</span></span>
         </div>
         <div class="reset-search-form">
             <form asp-action="List" asp-controller="Project" method="get" class="">
-                <button type="submit" class="btn btn-sm btn-default">@Localizer.Translate("ResetSearch", "Permission")</button>
+                <button type="submit" class="btn btn-sm btn-default">@Localizer.Translate("ResetSearch", "Admin")</button>
             </form>
         </div>
     </div>
