--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.list.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.list.less
@@ -1,6 +1,59 @@
 ﻿@import "ITJakub.Images.less";
 @import "ITJakub.Colors.less";
 
+.list-container {
+    &.selectable {
+        tbody {
+            cursor: pointer;
+
+            .active {
+                td {
+                    background-color: #DCDCDC !important;
+                }
+            }
+        }
+    }
+
+    .alert-info {
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
+
+    table {
+        tr {
+            border-bottom: 1px solid @separation-line-color;
+
+            td {
+                border: none;
+            }
+
+            .alert {
+                padding: 3px 7px;
+                margin: 1px 0 0 0;
+            }
+        }
+    }
+
+    .buttons {
+        vertical-align: middle;
+        text-align: right;
+
+        .btn-default {
+            margin-left: 0.5em;
+            margin-bottom: 0.5em;
+
+            &:first-of-type {
+                margin-left: 0;
+            }
+        }
+    }
+}
+
+.button-menu {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
 .reset-search {
     padding-bottom: 0.5em;
     padding-top: 0.5em;
