Cooperation view - add roles and permissions

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
@@ -9,6 +9,8 @@
 
 @section styles {
     <link asp-append-version="true" rel="stylesheet" href="~/Areas/Admin/css/ridics.project.css" />
+    <link asp-append-version="true" rel="stylesheet" href="~/css/ridics.permissions.css" />
+    <link asp-append-version="true" rel="stylesheet" href="~/css/ridics.checkbox.css" />
     <link asp-append-version="true" rel="stylesheet" href="~/css/ridics.list.css" />
     <link asp-append-version="true" rel="stylesheet" href="~/lib/bootstrap-select/dist/css/bootstrap-select.css" />
     <link asp-append-version="true" rel="stylesheet" href="~/lib/bootstrap-tokenfield/dist/css/bootstrap-tokenfield.css" />
