--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
@@ -50,6 +50,11 @@
     }
 
     .role-row {
+        .name,
+        .description {
+            text-align: left;
+        }
+        
         .description {
             font-size: 11px;
             white-space: normal;
