--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/lib.loading-visualization.scss
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/lib.loading-visualization.scss
@@ -8,8 +8,19 @@ $bordered_line_color: $menu-background-color;
 $circles_color: $menu-background-color;
 $bars_color: $menu-background-color;
 $dots_color: $menu-background-color;
+$line_background: lightgray;
+$line_color: $menu-background-color;
+$determinate_line_background: lightgray;
+$determinate_line_color: $menu-background-color;
+$spinner_shadow: lightgray;
+$spinner_color: $menu-background-color;
+$determinate_circle_background: lightgray;
+$determinate_circle_color: $menu-background-color;
+$dashed_color: $menu-background-color;
+$squares_color: $menu-background-color;
 
 $bars_scale: 5;
+$squares_scale: 15;
 $dots_scale: 15;
 
 @import "../lib/loading-visualization/src/element-styles.scss";
