--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/Widgets/_AddProjectPermissionsDialog.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/Widgets/_AddProjectPermissionsDialog.cshtml
@@ -12,16 +12,19 @@
                 <h5 id="specificProjectName" class="modal-title"></h5>
             </div>
             <div class="modal-body">
+                <div id="addPermissionHelpAlert" class="alert alert-info hide">
+                    @Localizer.Translate("AddPermissionOnProjectHelp", "Permission")
+                </div>
                 <div class="form-group">
                     <label for="roleSearchInput">@Localizer.Translate("SearchGroupLabel", "Permission", LocTranslationSource.File)</label>
-                    <input type="text" class="form-control role-search-input" id="roleSearchInput" placeholder="@Localizer.Translate("SearchGroup", "Permission", LocTranslationSource.File)" />
+                    <input type="text" class="form-control role-search-input" id="roleSearchInput" placeholder="@Localizer.Translate("SearchGroup", "Permission", LocTranslationSource.File)"/>
                 </div>
 
                 <div class="form-group">
                     <label for="selectedRole">@Localizer.Translate("SelectedGroup", "Permission")</label>
                     <p class="form-control-static" id="selectedRole">@Localizer.Translate("RoleIsNotSelected", "PermissionJs")</p>
                 </div>
-                
+
                 <fieldset class="form-group">
                     <label>@Localizer.Translate("Permissions", "Permission")</label>
                     <div>
