--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/_ProjectListItem.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/_ProjectListItem.cshtml
@@ -26,11 +26,11 @@
                 </div>
                 <div>@Localizer.Translate("Delete", "Admin")</div>
             </a>
-            <a href="@Url.Action("Project", "Project", new {id = viewModel.Id})">
+            <a class="rename-project-button">
                 <div>
                     <span class="glyphicon glyphicon-pencil"></span>
                 </div>
-                <div>@Localizer.Translate("Edit", "Admin")</div>
+                <div>@Localizer.Translate("Rename", "Admin")</div>
             </a>
         </div>
     </div>
