--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.list.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.list.less
@@ -2,6 +2,8 @@
 @import "ITJakub.Colors.less";
 
 .list-container {
+    min-height: 446px;
+
     &.selectable {
         tbody {
             cursor: pointer;
@@ -12,11 +14,6 @@
                 }
             }
         }
-    }
-
-    .alert-info {
-        margin-top: 8px;
-        margin-bottom: 8px;
     }
 
     table {
