Rename project dialog - add link to project edit

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/List.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/List.cshtml
@@ -140,6 +140,11 @@
                             <input class="form-control" id="renameProjectInput" type="text" maxlength="@Projects.MaxNameLength">
                         </div>
                     </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-3 col-lg-offset-4 col-md-8 col-lg-7">
+                            <button type="button" class="btn btn-default" id="editProject">@Localizer.Translate("GoToProjectEdit", "Admin")</button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
