Change project rename button to hyper-link (fix cursor)

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/_ProjectListItem.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/_ProjectListItem.cshtml
@@ -26,7 +26,7 @@
                 </div>
                 <div>@Localizer.Translate("Delete", "Admin")</div>
             </a>
-            <a class="rename-project-button">
+            <a href="#" class="rename-project-button">
                 <div>
                     <span class="glyphicon glyphicon-pencil"></span>
                 </div>
